Docs: Update all bugs.squid-cache.org URLs

--- a/doc/manuals/en_AU.po
+++ b/doc/manuals/en_AU.po
@@ -751,8 +751,8 @@ msgstr ""
 #: src/security/cert_generators/file/security_file_certgen.8.in:169
 #: src/squid.8.in:263 tools/cachemgr.cgi.8.in:72 tools/purge/purge.1:278
 #: tools/squidclient/squidclient.1:254
-msgid "Report bugs or bug fixes using http://bugs.squid-cache.org/"
-msgstr "Report bugs or bug fixes using http://bugs.squid-cache.org/"
+msgid "Report bugs or bug fixes using https://bugs.squid-cache.org/"
+msgstr "Report bugs or bug fixes using https://bugs.squid-cache.org/"
 
 #. type: Plain text
 #: src/acl/external/AD_group/ext_ad_group_acl.8:263
