Docs: Update all Squid wiki URLs

--- a/doc/manuals/fr.po
+++ b/doc/manuals/fr.po
@@ -1551,13 +1551,13 @@ msgstr "Squid est dérivé du Projet Harvest avec le financement d'ARPA."
 msgid ""
 "This manual page only lists the command line arguments.  For details on how "
 "to configure Squid see the file B<@SYSCONFDIR@/squid.conf.documented,> the "
-"Squid wiki FAQ and examples at http://wiki.squid-cache.org/ , or the "
+"Squid wiki FAQ and examples at https://wiki.squid-cache.org/ , or the "
 "configuration manual on the Squid home page"
 msgstr ""
 "Ce manuel répertorie uniquement la liste des arguments de commandes. Pour "
 "plus de détails sur la façon de configurer Squid, consulter le fichier "
 "B<@SYSCONFDIR@/squid.conf.documented>, vous pouvez aussi consulter le site "
-"wiki http://wiki.squid-cache.org/ pour les FAQ et les exemples Squid, "
+"wiki https://wiki.squid-cache.org/ pour les FAQ et les exemples Squid, "
 "ou consulter le manuel de configuration sur la Page d'accueil Squid."
 
 #. type: Plain text
