--- a/doc/manuals/it.po
+++ b/doc/manuals/it.po
@@ -1540,13 +1540,13 @@ msgstr "Squid deriva dal progetto Harvest, sponsorizzato da ARPA."
 msgid ""
 "This manual page only lists the command line arguments.  For details on how "
 "to configure Squid see the file B<@SYSCONFDIR@/squid.conf.documented,> the "
-"Squid wiki FAQ and examples at http://wiki.squid-cache.org/ , or the "
+"Squid wiki FAQ and examples at https://wiki.squid-cache.org/ , or the "
 "configuration manual on the Squid home page"
 msgstr ""
 "Questa pagina di manuale elenca solo le opzioni da linea di comando. Per "
 "avere ulteriori dettagli su come configurare Squid, si veda il file "
 "B<@SYSCONFDIR@/squid.conf.documented> , il Wiki di squid, la FAQ oppure gli "
-"esempi all'indirizzo http://wiki.squid-cache.org/ , oppure il manuale di "
+"esempi all'indirizzo https://wiki.squid-cache.org/ , oppure il manuale di "
 "configurazione all'indirizzo http://www.squid-cache.org/ o uno dei suoi "
 "mirror."
 
