--- a/doc/manuals/cs.po
+++ b/doc/manuals/cs.po
@@ -715,7 +715,7 @@ msgstr "OZNAMOVÁNÍ CHYB"
 #: src/security/cert_generators/file/security_file_certgen.8.in:167
 #: src/squid.8.in:261
 msgid ""
-"Bug reports need to be made in English.  See http://wiki.squid-cache.org/"
+"Bug reports need to be made in English.  See https://wiki.squid-cache.org/"
 "SquidFaq/BugReporting for details of what you need to include with your bug "
 "report."
 msgstr ""
@@ -2155,7 +2155,7 @@ msgid ""
 "username but any of the B<external_acl_type> format tags can be substituted "
 "in its place.  B<%EXT_TAG> , B<%LOGIN> , B<%IDENT> , B<%EXT_USER> , B<"
 "%SRC> , B<%SRCEUI48> , and B<%SRCEUI64> are all likely candidates for client "
-"identification.  The Squid wiki has more examples at http://wiki.squid-cache."
+"identification.  The Squid wiki has more examples at https://wiki.squid-cache."
 "org/ConfigExamples."
 msgstr ""
 
@@ -3763,7 +3763,7 @@ msgstr ""
 msgid ""
 "This manual page only lists the command line arguments.  For details on how "
 "to configure Squid see the file B<@SYSCONFDIR@/squid.conf.documented,> the "
-"Squid wiki FAQ and examples at http://wiki.squid-cache.org/ , or the "
+"Squid wiki FAQ and examples at https://wiki.squid-cache.org/ , or the "
 "configuration manual on the Squid home page"
 msgstr ""
 
@@ -4074,7 +4074,7 @@ msgstr ""
 #: tools/cachemgr.cgi.8.in:70 tools/purge/purge.1:276
 #: tools/squidclient/squidclient.1:252
 msgid ""
-"See http://wiki.squid-cache.org/SquidFaq/BugReporting for details of what "
+"See https://wiki.squid-cache.org/SquidFaq/BugReporting for details of what "
 "you need to include with your bug report."
 msgstr ""
 
