--- a/tools/squidclient/squidclient.1
+++ b/tools/squidclient/squidclient.1
@@ -248,7 +248,7 @@ Questions on the usage of this program can be sent to the
 .if !'po4a'hide' <squid-users@lists.squid-cache.org>
 .
 .SH REPORTING BUGS
-See http://wiki.squid-cache.org/SquidFaq/BugReporting for details of what you need to include with your bug report.
+See https://wiki.squid-cache.org/SquidFaq/BugReporting for details of what you need to include with your bug report.
 .PP
 Report bugs or bug fixes using http://bugs.squid-cache.org/
 .PP
