Docs: Update all Squid Bugzilla URLs (#1447)
The Squid Bugzilla now uses https:// instead of http://

--- a/src/acl/external/eDirectory_userip/ext_edirectory_userip_acl.8
+++ b/src/acl/external/eDirectory_userip/ext_edirectory_userip_acl.8
@@ -220,7 +220,7 @@ your servers are properly synchronizing partitions.
 Bug reports need to be made in English.
 See https://wiki.squid-cache.org/SquidFaq/BugReporting for details of what you need to include with your bug report.
 .PP
-Report bugs or bug fixes using http://bugs.squid-cache.org/
+Report bugs or bug fixes using https://bugs.squid-cache.org/
 .PP
 Report serious security bugs to
 .I Squid Bugs <squid-bugs@lists.squid-cache.org>
