--- a/src/auth/basic/RADIUS/basic_radius_auth.8
+++ b/src/auth/basic/RADIUS/basic_radius_auth.8
@@ -118,7 +118,7 @@ RADIUS than Squid.
 Bug reports need to be made in English.
 See https://wiki.squid-cache.org/SquidFaq/BugReporting for details of what you need to include with your bug report.
 .PP
-Report bugs or bug fixes using http://bugs.squid-cache.org/
+Report bugs or bug fixes using https://bugs.squid-cache.org/
 .PP
 Report serious security bugs to
 .I Squid Bugs <squid-bugs@lists.squid-cache.org>
