Implement cache_log_message id 69
Log message:
WARNING: Unsupported or unexpected from-helper annotation
with a name reserved for Squid use

has been found to be spamming some users, as it would be
emitted with every helper response.
In order to enable using the
cache_log_message id=... limit=...
directive, instrument the log message so it can be used with it

--- a/doc/debug-messages.dox
+++ b/doc/debug-messages.dox
@@ -66,5 +66,6 @@ ID Message gist
 66 WARNING: BCP 177 violation. Detected non-functional IPv6 loopback.
 67 WARNING: BCP 177 violation. IPv6 transport forced OFF by build parameters.
 68 Processing Configuration File: ... (depth ...)
+69 WARNING: Unsupported or unexpected from-helper annotation ...
 \endverbatim
 */
