--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Changes in squid-6.4 (15 Oct 2023):
+
+	- Regression: Restore support for legacy cache_object cache manager requests
+	- Regression: Do not use static initialization to register modules
+	- Bug 5301: cachemgr.cgi not showing new manager interface URLs
+	- Bug 5300: cachemgr.cgi assertion
+	- HTTP: Improve handling of empty lines received prior to request-line
+	- Y2038: improve printing of time settings
+	- Extend cache_log_message to problematic from-helper annotations
+
 Changes in squid-6.3 (03 Sep 2023):
 
 	- Bug 5294: ERR_CANNOT_FORWARD returned instead of ERR_DNS_FAIL
