--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ Changes in squid-6.4 (15 Oct 2023):
 	- Bug 5300: cachemgr.cgi assertion
 	- Fix handling of large HTTP headers in storeClientCopy()
 	- Fix store_client caller leak on certain errors
+	- Fix URL percent-encoding
 	- Miss if an HTTP 304 update would exceed reply_header_max_size
 	- HTTP: Improve handling of empty lines received prior to request-line
 	- Y2038: improve printing of time settings
