--- a/ChangeLog
+++ b/ChangeLog
@@ -11,8 +11,8 @@ Changes in squid-6.4 (15 Oct 2023):
 	- HTTP: Improve handling of empty lines received prior to request-line
 	- Y2038: improve printing of time settings
 	- Extend cache_log_message to problematic from-helper annotations
-	- Add some HTTP revalidation tests
-	- Improve unit test harness
+	- CI: More HTTP caching and revalidation tests
+	- CI: Improve test harness
 
 Changes in squid-6.3 (03 Sep 2023):
 
