--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@ Changes in squid-6.4 (22 Oct 2023):
 	- Regression: Do not use static initialization to register modules
 	- Bug 5301: cachemgr.cgi not showing new manager interface URLs
 	- Bug 5300: cachemgr.cgi assertion
-	- Bug: Fix stack buffer overflow when parsing Digest Authorization
+	- Fix stack buffer overflow when parsing Digest Authorization
 	- Fix userinfo percent-encoding
 	- Fix store_client caller memory leak on certain errors
 	- Fix validation of certificates with CN=*
@@ -15,7 +15,7 @@ Changes in squid-6.4 (22 Oct 2023):
 	- HTTP: Improve handling of empty lines received prior to request-line
 	- Y2038: improve printing of time settings
 	- Extend cache_log_message to problematic from-helper annotations
-	- .. and several Continuous Testing improvements
+	- ... and several Continues Integration improvements
 
 Changes in squid-6.3 (03 Sep 2023):
 
