--- a/ChangeLog
+++ b/ChangeLog
@@ -14,7 +14,7 @@ Changes in squid-6.4 (22 Oct 2023):
 	- HTTP: Improve handling of empty lines received prior to request-line
 	- Y2038: improve printing of time settings
 	- Extend cache_log_message to problematic from-helper annotations
-	- ... and several Continues Integration improvements
+	- ... and several Continuous Integration improvements
 
 Changes in squid-6.3 (03 Sep 2023):
 
