--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Changes in squid-6.5 (5 Nov 2023):
 
 	- Bug 5309: frequent "lowestOffset () <= target_offset" assertion
+	- Bug 4977: Remove mem_hdr::freeDataUpto() assertion
 	- Fix handling of expanding HTTP header values
 	- Fix RFC 1123 date parsing
 	- Gracefully shutdown when helper process startup fails
