Maintenance: Update doxygen configuration
Disable special IDL processing which mangles
some of our code badly, hiding getter/setter's
for some classes.

Enable Markdown .md files to be used instead
of our custom .dox files. This requires
doxygen 1.8.1 or later with Markdown enabled.

--- a/squid.dox
+++ b/squid.dox
@@ -349,7 +349,7 @@ SIP_SUPPORT            = NO
 # should set this option to NO.
 # The default value is: YES.
 
-IDL_PROPERTY_SUPPORT   = YES
+IDL_PROPERTY_SUPPORT   = NO
 
 # If member grouping is used in the documentation and the DISTRIBUTE_GROUP_DOC
 # tag is set to YES then doxygen will reuse the documentation of the first
@@ -816,7 +816,8 @@ FILE_PATTERNS          = *.dox \
                          *.h \
                          *.c \
                          *.cc \
-                         *.cci
+                         *.cci \
+                         *.md
 
 # The RECURSIVE tag can be used to specify whether or not subdirectories should
 # be searched for input files as well.
