--- a/squid.dox
+++ b/squid.dox
@@ -816,8 +816,7 @@ FILE_PATTERNS          = *.dox \
                          *.h \
                          *.c \
                          *.cc \
-                         *.cci \
-                         *.md
+                         *.cci
 
 # The RECURSIVE tag can be used to specify whether or not subdirectories should
 # be searched for input files as well.
