--- a/doc/debug-messages.dox
+++ b/doc/debug-messages.dox
@@ -68,5 +68,6 @@ ID Message gist
 68 Processing Configuration File: ... (depth ...)
 69 WARNING: Unsupported or unexpected from-helper annotation with a name reserved for Squid use: ...advice: If this is a custom annotation, rename it to add a trailing underscore: ...
 70 ERROR: Squid BUG: Job invalidated during ...
+71 Squid bug 5187 workaround triggered
 \endverbatim
 */
