--- a/doc/debug-messages.dox
+++ b/doc/debug-messages.dox
@@ -69,6 +69,6 @@ ID Message gist
 69 WARNING: Unsupported or unexpected from-helper annotation with a name reserved for Squid use: ...advice: If this is a custom annotation, rename it to add a trailing underscore: ...
 70 ERROR: Squid BUG: Job invalidated during ... that threw exception: ...
 71 ERROR: Squid BUG: Job invalidated during ...
-72 Squid bug 5187 workaround triggered
+72 WARNING: Squid bug 5187 workaround triggered
 \endverbatim
 */
