--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Changes in squid-6.7 (4 Feb 2024)
+
+	- Bug 5274: Successful tunnels logged as TCP_TUNNEL/500
+	- Fix crash when NTLM and Negotiate helpers are queried with no HTTP request
+	- Extend cache_log_message to Bug 5187 and job invalidation BUGs
+	- Remove incorrect beta version warning
+	- MS Windows portability improvements
+	- ... and some documentation improvements
+
 Changes in squid-6.6 (5 Dec 2023):
 
 	- Bug 5328: Fix ESI build with libxml2 v2.12.0
