--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,11 @@
 Changes in squid-6.7 (4 Feb 2024)
 
+	- Bug 5337: workaround for crash on startup if -a option is used
 	- Bug 5274: Successful tunnels logged as TCP_TUNNEL/500
 	- Fix crash when NTLM and Negotiate helpers are queried with no HTTP request
 	- Fix SslBump memory leak when mimicking certificates with Authority Key Identifier
+	- Fix memory leak on SslBump certificates with Authority Key Identifier extension
+	- Fix a possible integer overflow in FTP Gateway
 	- Extend cache_log_message to Bug 5187 and job invalidation BUGs
 	- Remove incorrect beta version warning
 	- MS Windows portability improvements
