Maintenance: update --with-heimdal-krb5 detection

--- a/squid.dox
+++ b/squid.dox
@@ -2067,6 +2067,7 @@ PREDEFINED             = __cplusplus \
                          FOLLOW_X_FORWARDED_FOR \
                          FORW_VIA_DB \
                          ICAP_CLIENT \
+                         HAVE_LIBHEIMDAL_KRB5 \
                          LINUX_NETFILTER \
                          SQUID_SNMP \
                          USE_ADAPTATION \
@@ -2081,7 +2082,6 @@ PREDEFINED             = __cplusplus \
                          USE_ERR_LOCALES \
                          USE_EPOLL \
                          USE_GNUTLS \
-                         USE_HEIMDAL_KRB5 \
                          USE_HEXDUMP \
                          USE_HTCP \
                          USE_HTTP_VIOLATIONS \
