Documentation: Update Programming Guide title

--- a/doc/Programming-Guide/01_Main.dox
+++ b/doc/Programming-Guide/01_Main.dox
@@ -7,7 +7,7 @@
  */
 
 /**
-\mainpage Squid 3.x Developer Programming Guide
+\mainpage Squid Developer Programming Guide
 
 \section Abstract Abstract
 
