Maintenance: update --with-ldap detection
Remove Mosilla LDAP SDK support which has
apparently not been maintained since 2017.

--- a/doc/manuals/manuals.pot
+++ b/doc/manuals/manuals.pot
@@ -772,7 +772,7 @@ msgstr ""
 #: src/acl/external/kerberos_ldap_group/ext_kerberos_ldap_group_acl.8:80
 msgid ""
 "The SSL certificate database can be set via the environment variable "
-"SSL_CERTDBPATH (default /etc/certs) (Sun and Mozilla LDAP SDK)."
+"SSL_CERTDBPATH (default /etc/certs) (Sun LDAP SDK)."
 msgstr ""
 
 #. type: Plain text
