--- a/src/acl/external/kerberos_ldap_group/ext_kerberos_ldap_group_acl.8
+++ b/src/acl/external/kerberos_ldap_group/ext_kerberos_ldap_group_acl.8
@@ -76,7 +76,7 @@ Use SSL for the LDAP connection.
 .IP
 The CA certificate file can be set via the environment variable TLS_CACERTFILE (default /etc/ssl/certs/cert.pem) (OpenLDAP).
 .IP
-The SSL certificate database can be set via the environment variable SSL_CERTDBPATH (default /etc/certs) (Sun and Mozilla LDAP SDK).
+The SSL certificate database can be set via the environment variable SSL_CERTDBPATH (default /etc/certs) (Sun LDAP SDK).
 .if !'po4a'hide' .TP 12
 .if !'po4a'hide' .B \-a
 Allow SSL without certificate verification.
