--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,9 @@
 Changes in squid-6.8 (4 Mar 2024)
 
 	- Bug 5344: mgr:config segfaults without logformat
+	- Bug 5343: Fix build on GCC 14
 	- Fix infinite recursion when parsing malformed HTTP chunks
 	- Fix max-stale in default refresh_pattern
-	- Fix build on GCC 14
-	- Fix debugging for responses that Expire at check time
-	- Fix misleading Dns::CachedIps::restoreGoodness() debugging
 	- Fix marking of problematic cached IP addresses
 	- Improved portability to MacOS
 	- ... and some documentation improvements
