--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Changes in squid-6.9 (7 Apr 2024)
+	- Bug 5069: Keep listening after getsockname() error
+	- Reduce stale errno usage
+	- Plug memory leak in handling cache manager requests
+	- Fix NIS helper header-guard
+	- Fix error: template-id not allowed for constructor in C++20
+	- Improvements release packaging automations
+
 Changes in squid-6.8 (4 Mar 2024)
 
 	- Bug 5344: mgr:config segfaults without logformat
