Removed %IDENT from doc/manuals and 'time_quota' helper

--- a/doc/manuals/ar.po
+++ b/doc/manuals/ar.po
@@ -2167,7 +2167,7 @@ msgstr ""
 msgid ""
 "User is just a unique key value. The above example uses %LOGIN and the "
 "username but any of the B<external_acl_type> format tags can be substituted "
-"in its place.  B<%EXT_TAG> , B<%LOGIN> , B<%IDENT> , B<%EXT_USER> , B<"
+"in its place.  B<%EXT_TAG> , B<%LOGIN> , B<%EXT_USER> , B<"
 "%SRC> , B<%SRCEUI48> , and B<%SRCEUI64> are all likely candidates for client "
 "identification.  The Squid wiki has more examples at https://wiki.squid-cache."
 "org/ConfigExamples."
