--- a/src/acl/external/time_quota/ext_time_quota_acl.8
+++ b/src/acl/external/time_quota/ext_time_quota_acl.8
@@ -7,7 +7,7 @@ Version 1.0
 .
 .SH SYNOPSIS
 .if !'po4a'hide' .B ext_time_quota_acl
-.if !'po4a'hide' .B "[\-b database] [\-l logfile] [\-d] [\-p pauselen] [-n] [\-h] configfile
+.if !'po4a'hide' .B "[\-b database] [\-l logfile] [\-d level] [\-p pauselen] [-n] [\-h] configfile
 .
 .SH DESCRIPTION
 .B ext_time_quota_acl
@@ -42,7 +42,7 @@ then stderr will be used and the logging will go to Squids main cache.log.
 .
 .if !'po4a'hide' .TP
 .if !'po4a'hide' .B "\-d"
-Enables debug logging in the logfile.
+Enables debug logging in the logfile, at growing levels of verbosity from 0 to 3.
 .
 .if !'po4a'hide' .TP
 .if !'po4a'hide' .B "\-n"
